--- a/todo.txt
+++ b/todo.txt
@@ -58,3 +58,13 @@ Article Log:
 - By default, the article log shows articles from all companies on the watchlist.
 - The user can filter the list by company.
 - The same article cannot be added to the log twice.
+
+
+- Moved the watchlist and keywords list to a single ‘Settings’ page.
+- If there are no articles matching the dates and keywords, display ‘No articles found for {company name}’
+- Added Anthropic, Bank of America, and Neuralink mock data
+- Created the ‘All News’ page
+    - Displays a table with all the news in the mock data
+    - User can filter by company, source, and date range
+    - User can search the articles (title, description, and content)
+    - User can sort by clicking on a column (sorted by publishing date by default)
